Feat(Scroll): Intersection observer was implemented

--- a/scroll-to-accept.html
+++ b/scroll-to-accept.html
@@ -103,11 +103,12 @@
 
         button[disabled] {
           opacity: 0.1;
-          /* transform: translateX(-200%) scale(0.5); */
+          transform: translateX(-200%) scale(0.5); */
         }
 
         .terms-and-conditions {
-          overflow: scroll;
+          overflow-y: scroll;
+          overflow-x: hidden;
         }
       </style>
       <script src="./scroll-to-accept.js"></script>
